--- a/Tackle/Tackle.csproj
+++ b/Tackle/Tackle.csproj
@@ -65,10 +65,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
-    <Compile Include="JSONSerialisation.cs" />
+    <Compile Include="HandyStuff\ChangePageEvent.cs" />
+    <Compile Include="HandyStuff\JSONSerialisation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Networking.cs" />
+    <Compile Include="HandyStuff\Networking.cs" />
     <Compile Include="Pages\LogInModel.cs" />
     <Compile Include="Pages\LogInViewModel.cs" />
     <Compile Include="Pages\ShellViewModel.cs" />
@@ -113,7 +114,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\TeacherMainModelView.xaml">
+    <Page Include="Pages\TeacherMainMenuView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
