--- a/Tackle/Tackle.csproj
+++ b/Tackle/Tackle.csproj
@@ -82,10 +82,16 @@
   <ItemGroup>
     <Compile Include="HandyStuff\Networking.cs" />
     <Compile Include="HandyStuff\QuizHandling.cs" />
+    <Compile Include="HandyStuff\QuizResults.cs" />
     <Compile Include="Pages\LogInModel.cs" />
     <Compile Include="Pages\LogInViewModel.cs" />
     <Compile Include="Pages\QuizScreenModel.cs" />
     <Compile Include="Pages\QuizScreenViewModel.cs" />
+    <Compile Include="Pages\QuizSubmitModel.cs" />
+    <Compile Include="Pages\QuizSubmitView.xaml.cs">
+      <DependentUpon>QuizSubmitView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\QuizSubmitViewModel.cs" />
     <Compile Include="Pages\ShellViewModel.cs" />
     <Compile Include="Pages\StudentMainMenuViewModel.cs" />
     <Compile Include="Pages\TeacherMainMenuViewModel.cs" />
@@ -121,6 +127,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\QuizScreenView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\QuizSubmitView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
