--- a/Tackle/Tackle.csproj
+++ b/Tackle/Tackle.csproj
@@ -83,6 +83,11 @@
     <Compile Include="HandyStuff\Networking.cs" />
     <Compile Include="HandyStuff\QuizHandling.cs" />
     <Compile Include="HandyStuff\QuizResults.cs" />
+    <Compile Include="Pages\JoinClassModel.cs" />
+    <Compile Include="Pages\JoinClassView.xaml.cs">
+      <DependentUpon>JoinClassView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\JoinClassViewModel.cs" />
     <Compile Include="Pages\LogInModel.cs" />
     <Compile Include="Pages\LogInViewModel.cs" />
     <Compile Include="Pages\QuizScreenModel.cs" />
@@ -122,6 +127,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Pages\JoinClassView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\LogInView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
