--- a/Tackle/Tackle.csproj
+++ b/Tackle/Tackle.csproj
@@ -92,6 +92,11 @@
     <Compile Include="Pages\JoinClassViewModel.cs" />
     <Compile Include="Pages\LogInModel.cs" />
     <Compile Include="Pages\LogInViewModel.cs" />
+    <Compile Include="Pages\ManageClassesModel.cs" />
+    <Compile Include="Pages\ManageClassesView.xaml.cs">
+      <DependentUpon>ManageClassesView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ManageClassesViewModel.cs" />
     <Compile Include="Pages\QuizListModel.cs" />
     <Compile Include="Pages\QuizListView.xaml.cs">
       <DependentUpon>QuizListView.xaml</DependentUpon>
@@ -142,6 +147,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\LogInView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ManageClassesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
